--- a/wildfire_grid2.ipynb
+++ b/wildfire_grid2.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "72fadaa9-2625-4898-85cc-089c2ac70697",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.13.1 (main, Dec  3 2024, 17:59:52) [Clang 16.0.0 (clang-1600.0.26.4)]"
   },
   "vscode": {
    "interpreter": {
