--- a/sim_experimentation/2D_sim.ipynb
+++ b/sim_experimentation/2D_sim.ipynb
@@ -98,9 +98,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (gym_env)",
+   "display_name": "gym_env",
    "language": "python",
-   "name": "gym_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -112,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.13.1 (main, Dec  3 2024, 17:59:52) [Clang 16.0.0 (clang-1600.0.26.4)]"
   },
   "orig_nbformat": 4,
   "vscode": {
